# IconResourceDemo

./: App.xaml  App.xaml.cs  CMakeLists.txt  CMakeSettings.json  MainWindow.xaml  MainWindow.xaml.cs
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
